--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,14 @@
 <body>
     <header>
         <h1>{{ site.title }}</h1>
+          <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+          </nav>
     </header>
     <main>
         {{ content }}
